# service/api/delete-unban.go
@@ -7,7 +7,8 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
-func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+func (rt *_router) deleteUnban(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+	// Retrieve the logged-in user's ID from the context
 	loggedInUserId := r.Context().Value("userID").(string)
 
 	// Decode the JSON body
@@ -18,7 +19,13 @@ func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprou
 		return
 	}
 
-	if err := rt.db.FollowUser(loggedInUserId, requestData["userIdToFollow"]); err != nil {
+	userIdToUnban := requestData["userIdToUnban"]
+	if userIdToUnban == "" {
+		http.Error(w, "User ID to unban is required", http.StatusBadRequest)
+		return
+	}
+
+	if err := rt.db.UnbanUser(loggedInUserId, userIdToUnban); err != nil {
 		// Handle specific errors as needed
 		http.Error(w, err.Error(), http.StatusBadRequest) // Or other appropriate status code
 		return
@@ -26,5 +33,5 @@ func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprou
 
 	// If successful
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("User followed successfully"))
+	w.Write([]byte("User unbanned successfully"))
 }
