# service/api/post-ban.go
@@ -7,7 +7,7 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
-func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+func (rt *_router) postBan(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	loggedInUserId := r.Context().Value("userID").(string)
 
 	// Decode the JSON body
@@ -18,7 +18,13 @@ func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprou
 		return
 	}
 
-	if err := rt.db.FollowUser(loggedInUserId, requestData["userIdToFollow"]); err != nil {
+	userIdToBan := requestData["userIdToBan"]
+	if userIdToBan == "" {
+		http.Error(w, "User ID to ban is required", http.StatusBadRequest)
+		return
+	}
+
+	if err := rt.db.BanUser(loggedInUserId, userIdToBan); err != nil {
 		// Handle specific errors as needed
 		http.Error(w, err.Error(), http.StatusBadRequest) // Or other appropriate status code
 		return
@@ -26,5 +32,5 @@ func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprou
 
 	// If successful
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("User followed successfully"))
+	w.Write([]byte("User banned successfully"))
 }
